syntax = "proto3";
package bind.v1;

// BindService
service BindService{
  // bind id and type on socket conn
  rpc BindId(BindIdRequest) returns (BindIdResponse);
  rpc BindExist(BindExistRequest) returns (BindExistResponse);
}
// request
message BindIdRequest{
  int64 fd = 1;
  string id = 2;
  string id_type = 3;
}
// response
message BindIdResponse{}

// request
message BindExistRequest{
  string id = 1;
  string id_type = 2;
}
// response
message BindExistResponse{
  bool exist = 1;
}