syntax = "proto3";
package group.v1;

// GroupService
service GroupService{
  // join a group
  rpc JoinGroup(JoinGroupRequest) returns (JoinGroupResponse);
  // leave a group
  rpc LeaveGroup(LeaveGroupRequest) returns (LeaveGroupResponse);
  // broadcast in a group
  rpc BroadcastGroup(BroadcastGroupRequest) returns (BroadcastGroupResponse);
}

message JoinGroupRequest{
  Group group = 1;
  Member member = 2;
}

message JoinGroupResponse{}

message LeaveGroupRequest{
  Group group = 1;
  int64 fd = 2;
}

message LeaveGroupResponse{}

message BroadcastGroupRequest{
  Group group = 1;
  string id = 2;
  uint32 action_id = 3;
  string action_name = 4;
  bytes message = 5;
}

message BroadcastGroupResponse{}

message Group{
  string name = 1;
}

message Member{
  int64 fd = 1;
  string id = 2;
}