syntax = "proto3";
package message.v1;

// MessageService
service MessageService{
  // send message to client
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest{
  message BindId{
    string id = 1;
    string type = 2;
  }
  oneof target {
    int64 fd = 1;
    BindId id = 2;
  }
  uint32 action_id = 3;
  string action_name = 4;
  bytes pb_message = 5;
  bytes json_message = 6;
}

message SendMessageResponse{}